Add JavaFX-based mock implementation of library occupancy dashboards
This commit adds:
- OccupancyModel.java: Data model with nested Floor class
- OccupancyListener.java: Interface for occupancy update notifications
- OccupancyService.java: Singleton service with mock simulation
- StaffDashboardFX.java: Staff dashboard with per-floor details
- StudentDashboardFX.java: Student dashboard with overall occupancy
- MainFX.java: Main JavaFX application entry point
- README.md: Updated with run instructions and formula descriptions
- .gitignore: Added to exclude build artifacts

Co-authored-by: vmindy <191557640+vmindy@users.noreply.github.com>